--- a/api/.env.example
+++ b/api/.env.example
@@ -2,8 +2,11 @@
 SECRET_KEY=your_secret_key
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
-SQLALCHEMY_DATABASE_URL=postgresql://user:password@localhost/feedback_db:5288
 
-POSTGRES_USER=user
-POSTGRES_PASSWORD=password
+POSTGRES_HOST=localhost
+POSTGRES_USER=user1
+POSTGRES_PASSWORD=password1
 POSTGRES_DB=feedback_db
+POSTGRES_PORT=5288
+
+DEV_MODE=True
