--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
     "@pinia/nuxt": "^0.5.1",
     "axios": "^1.7.2",
     "nuxt": "^3.11.2",
+    "pinia": "^2.1.7",
     "vue": "^3.4.27",
     "vue-router": "^4.3.2",
     "vuex": "^4.1.0"
