--- a/app/package.json
+++ b/app/package.json
@@ -12,10 +12,18 @@
   "dependencies": {
     "@pinia/nuxt": "^0.5.1",
     "axios": "^1.7.2",
+    "dotenv": "^16.4.5",
     "nuxt": "^3.11.2",
     "pinia": "^2.1.7",
+    "qs": "^6.12.1",
     "vue": "^3.4.27",
     "vue-router": "^4.3.2",
     "vuex": "^4.1.0"
+  },
+  "devDependencies": {
+    "@types/qs": "^6.9.15",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3"
   }
 }
