--- a/api/.env.example
+++ b/api/.env.example
@@ -1,12 +1,14 @@
 # .env
 SECRET_KEY=your_secret_key
 ALGORITHM=HS256
-ACCESS_TOKEN_EXPIRE_MINUTES=30
+ACCESS_TOKEN_EXPIRE_MINUTES=60
 
-POSTGRES_HOST=localhost
+POSTGRES_HOST=db
 POSTGRES_USER=user1
 POSTGRES_PASSWORD=password1
 POSTGRES_DB=feedback_db
-POSTGRES_PORT=5288
+POSTGRES_PORT=5432
 
 DEV_MODE=True
+SEED_DATA=True
+DEFAULT_RESPONSE_LIMIT=50
