--- a/app/package.json
+++ b/app/package.json
@@ -1,32 +1,34 @@
-  {
+{
     "name": "nuxt-app",
     "private": true,
     "type": "module",
     "scripts": {
-      "build": "BUILD_TIME=true npm run static && nuxt build",
-      "dev": "nuxt dev",
-      "generate": "nuxt generate",
-      "preview": "nuxt preview",
-      "postinstall": "nuxt prepare",
-      "static": "node build.cjs"
+        "build": "BUILD_TIME=true npm run static && nuxt build",
+        "dev": "nuxt dev",
+        "generate": "nuxt generate",
+        "preview": "nuxt preview",
+        "postinstall": "nuxt prepare",
+        "static": "node build.cjs"
     },
     "dependencies": {
-      "@pinia/nuxt": "^0.5.1",
-      "axios": "^1.7.2",
-      "dotenv": "^16.4.5",
-      "nuxt": "^3.11.2",
-      "pinia": "^2.1.7",
-      "qs": "^6.12.1",
-      "ts-node": "^10.9.2",
-      "typescript": "^5.4.5",
-      "vue": "^3.4.27",
-      "vue-router": "^4.3.2",
-      "vuex": "^4.1.0"
+        "@pinia/nuxt": "^0.5.1",
+        "axios": "^1.7.2",
+        "dotenv": "^16.4.5",
+        "nuxt": "^3.11.2",
+        "pinia": "^2.1.7",
+        "postcss-import": "^16.1.0",
+        "postcss-nested": "^6.0.1",
+        "qs": "^6.12.1",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.4.5",
+        "vue": "^3.4.27",
+        "vue-router": "^4.3.2",
+        "vuex": "^4.1.0"
     },
     "devDependencies": {
-      "@types/qs": "^6.9.15",
-      "autoprefixer": "^10.4.19",
-      "postcss": "^8.4.38",
-      "tailwindcss": "^3.4.3"
+        "@types/qs": "^6.9.15",
+        "autoprefixer": "^10.4.19",
+        "postcss": "^8.4.38",
+        "tailwindcss": "^3.4.3"
     }
-  }
+}
