--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -1,6 +1,3 @@
-# docker-compose.yml
-version: '3.8'
-
 services:
   db:
     image: postgres:13
@@ -17,16 +14,10 @@ services:
   api:
     build: .  
     volumes:
-      - ./src:/api/src
-      - ./requirements.txt:/api/requirements.txt
+      - ./src:/app/src
+      - ./pyproject.toml:/app/pyproject.toml
+      - ./poetry.lock:/app/poetry.lock
     ports:
       - "8000:8000"
     env_file:
       - .env
-    
-
-volumes:
-  postgres_data:
-
-
-
