--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,6 +52,12 @@ jobs:
           docker build -t ${{ secrets.DOCKER_USERNAME }}/vinylflamingo-feeback-api:latest ./api
           docker push ${{ secrets.DOCKER_USERNAME }}/vinylflamingo-feeback-api:latest
 
+      - name: Setup SSH key
+        run: |
+            mkdir -p ~/.ssh
+            echo "${{ secrets.DIGITALOCEAN_SSH_KEY }}" > ~/.ssh/id_rsa
+            chmod 600 ~/.ssh/id_rsa
+
       - name: Add DigitalOcean to known_hosts
         run: |
           ssh-keyscan -H ${{ secrets.DIGITALOCEAN_HOST }} >> ~/.ssh/known_hosts
