possibly missing .envs

--- a/api/docker-compose.prod.yml
+++ b/api/docker-compose.prod.yml
@@ -5,6 +5,8 @@ services:
     image: ${DOCKER_USERNAME}/vinylflamingo-feeback-api:latest
     environment:
       - ENV=production
+    env_file:
+      - .env
     ports:
       - "8000:8000"
     volumes: []
