--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,6 +46,8 @@ jobs:
           echo "SEED_DATA=True" >> ./api/.env
           echo "DEFAULT_RESPONSE_LIMIT=20" >> ./api/.env
           echo "PYTHONUNBUFFERED=1" >> ./api/.env
+          echo "DOCKER_USERNAME=${{ secrets.DOCKER_USERNAME}}" >> ./api/.env
+          echo "DOCKER_PASSWORD=${{ secrets.DOCKER_PASSWORD}}" >> ./api/.env
 
       - name: Build and push Docker image
         run: |
@@ -67,4 +69,4 @@ jobs:
           SSH_PRIVATE_KEY: ~/.ssh/id_rsa
         run: |
           scp -o StrictHostKeyChecking=no -i $SSH_PRIVATE_KEY ./api/docker-compose.yml ./api/docker-compose.prod.yml ./api/.env ${{ secrets.DIGITALOCEAN_USER }}@${{ secrets.DIGITALOCEAN_HOST }}:/opt/vinylflamingo
-          ssh -o StrictHostKeyChecking=no -i $SSH_PRIVATE_KEY ${{ secrets.DIGITALOCEAN_USER }}@${{ secrets.DIGITALOCEAN_HOST }} "cd /opt/vinylflamingo && docker pull ${{ secrets.DOCKER_USERNAME }}/vinylflamingo-feeback-api:latest && docker-compose --env-file .env -f docker-compose.yml -f docker-compose.prod.yml up -d --remove-orphans"
+          ssh -o StrictHostKeyChecking=no -i $SSH_PRIVATE_KEY ${{ secrets.DIGITALOCEAN_USER }}@${{ secrets.DIGITALOCEAN_HOST }} "cd /opt/vinylflamingo && docker pull fcostoya/vinylflamingo-feeback-api:latest && docker-compose --env-file .env -f docker-compose.yml -f docker-compose.prod.yml up -d --remove-orphans"
