--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -1,3 +1,5 @@
+version: '3.8'
+
 services:
   db:
     image: postgres:13
@@ -12,7 +14,7 @@ services:
       - ./db:/var/lib/postgresql/data
 
   api:
-    build: .  
+    build: .
     volumes:
       - ./src:/app/src
       - ./pyproject.toml:/app/pyproject.toml
