conditional deploy, and fix to env

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,26 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Check for changes in the api folder
+        id: check_changes
+        run: |
+          # Fetch the base reference to compare changes
+          git fetch origin ${{ github.event.before }}
+          # Check for changes in the api folder
+          if git diff --quiet ${{ github.event.before }} HEAD -- api; then
+            echo "No changes in the api folder"
+            echo "::set-output name=changes::false"
+          else
+            echo "Changes detected in the api folder"
+            echo "::set-output name=changes::true"
+          fi
+
+      - name: Exit if no changes in the api folder
+        if: steps.check_changes.outputs.changes == 'false'
+        run: |
+          echo "No changes detected in the api folder, exiting..."
+          exit 0
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
@@ -55,9 +75,9 @@ jobs:
 
       - name: Setup SSH key
         run: |
-            mkdir -p ~/.ssh
-            echo "${{ secrets.DIGITALOCEAN_SSH_KEY }}" | tr -d '\r' | cat > ~/.ssh/id_rsa
-            chmod 600 ~/.ssh/id_rsa
+          mkdir -p ~/.ssh
+          echo "${{ secrets.DIGITALOCEAN_SSH_KEY }}" | tr -d '\r' | cat > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
 
       - name: Add DigitalOcean to known_hosts
         run: |
