redirect fixing, also smarter use of reactivity.

--- a/app/package.json
+++ b/app/package.json
@@ -9,7 +9,7 @@
         "preview": "nuxt preview",
         "postinstall": "nuxt prepare",
         "static": "node build.cjs",
-        "build": "nuxt build"
+        "build": "BUILD_TIME=true nuxt build"
     },
     "dependencies": {
         "@pinia/nuxt": "^0.5.1",
