--- a/api/docker-compose.prod.yml
+++ b/api/docker-compose.prod.yml
@@ -5,6 +5,6 @@ services:
     image: ${DOCKER_USERNAME}/vinylflamingo-feeback-api:latest
     environment:
       - ENV=production
-    volumes: !reset []
+    volumes: []
     env_file:
       - .env
