--- a/app/package.json
+++ b/app/package.json
@@ -27,10 +27,15 @@
         "vuex": "^4.1.0"
     },
     "devDependencies": {
+        "@eslint/js": "^9.3.0",
         "@types/qs": "^6.9.15",
         "autoprefixer": "^10.4.19",
+        "eslint": "^9.3.0",
+        "eslint-plugin-vue": "^9.26.0",
+        "globals": "^15.3.0",
         "postcss": "^8.4.38",
-        "tailwindcss": "^3.4.3"
+        "tailwindcss": "^3.4.3",
+        "typescript-eslint": "^7.11.0"
     },
     "optionalDependencies": {
         "@rollup/rollup-linux-x64-gnu": "4.9.5"
