--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -95,7 +95,7 @@ jobs:
         env:
           SSH_PRIVATE_KEY: ~/.ssh/id_rsa
         run: |
-          ssh -o StrictHostKeyChecking=no -i $SSH_PRIVATE_KEY ${{ secrets.DIGITALOCEAN_USER }}@${{ secrets.DIGITALOCEAN_HOST }} "docker compose -f /opt/vinylflamingo/docker-compose.yml -f /opt/vinylflamingo/docker-compose.prod.yml down -v && docker system prune -a"
+          ssh -o StrictHostKeyChecking=no -i $SSH_PRIVATE_KEY ${{ secrets.DIGITALOCEAN_USER }}@${{ secrets.DIGITALOCEAN_HOST }} "docker compose -f /opt/vinylflamingo/docker-compose.yml -f /opt/vinylflamingo/docker-compose.prod.yml down -v && docker system prune -a -f"
 
       - name: Deploy to DigitalOcean
         if: steps.check_changes.outputs.changes == 'true'
