--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -19,7 +19,17 @@ services:
       - ./src:/app/src
       - ./pyproject.toml:/app/pyproject.toml
       - ./poetry.lock:/app/poetry.lock
+      - ./.env:/app/.env
     ports:
       - "8000:8000"
     env_file:
       - .env
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      interval: 60s
+      timeout: 15s
+      retries: 3
+
+
+
+
