mobile menu done

--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,8 @@
     "dependencies": {
         "@pinia/nuxt": "^0.5.1",
         "axios": "^1.7.2",
+        "cookie-universal-nuxt": "^2.2.2",
+        "crypto-js": "^4.2.0",
         "dotenv": "^16.4.5",
         "nuxt": "^3.11.2",
         "pinia": "^2.1.7",
@@ -24,6 +26,7 @@
         "typescript": "^5.4.5",
         "vue": "^3.4.27",
         "vue-router": "^4.3.2",
+        "vue3-perfect-scrollbar": "^2.0.0",
         "vuex": "^4.1.0"
     },
     "devDependencies": {
