--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -95,12 +95,12 @@ jobs:
         env:
           SSH_PRIVATE_KEY: ~/.ssh/id_rsa
         run: |
-          ssh -o StrictHostKeyChecking=no -i $SSH_PRIVATE_KEY ${{ secrets.DIGITALOCEAN_USER }}@${{ secrets.DIGITALOCEAN_HOST }} "docker compose -f /opt/vinylflamingo/docker-compose.yml -f /opt/vinylflamingo/docker-compose.prod.yml down -v && docker system prune -a -f"
+          ssh -o StrictHostKeyChecking=no -i $SSH_PRIVATE_KEY ${{ secrets.DIGITALOCEAN_USER }}@${{ secrets.DIGITALOCEAN_HOST }} "docker compose -f /opt/vinylflamingo-feedback-app/docker-compose.yml -f /opt/vinylflamingo-feedback-app/docker-compose.prod.yml down -v"
 
       - name: Deploy to DigitalOcean
         if: steps.check_changes.outputs.changes == 'true'
         env:
           SSH_PRIVATE_KEY: ~/.ssh/id_rsa
         run: |
-          scp -o StrictHostKeyChecking=no -i $SSH_PRIVATE_KEY ./api/docker-compose.yml ./api/docker-compose.prod.yml ./api/.env ${{ secrets.DIGITALOCEAN_USER }}@${{ secrets.DIGITALOCEAN_HOST }}:/opt/vinylflamingo
-          ssh -o StrictHostKeyChecking=no -i $SSH_PRIVATE_KEY ${{ secrets.DIGITALOCEAN_USER }}@${{ secrets.DIGITALOCEAN_HOST }} "cd /opt/vinylflamingo && docker pull ${{ secrets.DOCKER_USERNAME }}/vinylflamingo-feeback-api:latest && docker compose --env-file .env -f docker-compose.yml -f docker-compose.prod.yml up -d --remove-orphans"
+          scp -o StrictHostKeyChecking=no -i $SSH_PRIVATE_KEY ./api/docker-compose.yml ./api/docker-compose.prod.yml ./api/.env ${{ secrets.DIGITALOCEAN_USER }}@${{ secrets.DIGITALOCEAN_HOST }}:/opt/vinylflamingo-feedback-app
+          ssh -o StrictHostKeyChecking=no -i $SSH_PRIVATE_KEY ${{ secrets.DIGITALOCEAN_USER }}@${{ secrets.DIGITALOCEAN_HOST }} "cd /opt/vinylflamingo-feedback-app && docker pull ${{ secrets.DOCKER_USERNAME }}/vinylflamingo-feedback-api:latest && docker compose --env-file .env -f docker-compose.yml -f docker-compose.prod.yml up -d --remove-orphans"
