test pipeline change

--- a/api/docker-compose.prod.yml
+++ b/api/docker-compose.prod.yml
@@ -3,6 +3,7 @@ version: '3.8'
 services:
   api:
     image: ${DOCKER_USERNAME}/vinylflamingo-feeback-api:latest
+    build: !reset
     environment:
       - ENV=production
     volumes: !reset []
