--- a/api/docker-compose.prod.yml
+++ b/api/docker-compose.prod.yml
@@ -7,5 +7,10 @@ services:
     environment:
       - ENV=production
     volumes: !reset []
+    networks:
+      - pinkproxy
     env_file:
       - .env
+networks:
+  pinkproxy:
+    external: true
