--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -12,6 +12,8 @@ services:
       - "5288:5432"
     volumes:
       - ./db:/var/lib/postgresql/data
+    networks:
+      - default
 
   api:
     build: .
@@ -24,11 +26,18 @@ services:
       - "8000:8000"
     env_file:
       - .env
+    networks:
+      - default
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
       interval: 15s
       timeout: 5s
       retries: 3
+
+networks:
+  default:
+    name: Feedback
+    driver: bridge
 
 
 
